# metadata-schemas

./: .gitignore  .pre-commit-config.yaml  ICephys-schema-TNowak.json  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/ISSUE_TEMPLATE/: new-metadata-schema-request.yml
.github/workflows/: tests.yaml
docs/api-docs/: api-requirements.md  api-use-cases.md
docs/mappings/: gene_mapping_human.tsv  gene_mapping_human_v0.0.0.yaml  gene_mapping_humantomouse.tsv  gene_mapping_humantomouse_v0.0.0.tsv  gene_mapping_humantomouse_v0.0.0.yaml  gene_mapping_mouse_v0.0.0.yaml  human_gene_mapping_example_v0.0.0.tsv
docs/schemas/: BICAN-techniques-simple.csv
docs/schemas/Controlled-Vocabularies/: BICAN-Project-and-Data-Collections.csv  BICAN-Species.csv  BICAN-Specimens.csv  BICAN-techniques.csv  Controlled-Vocabularies.md
docs/schemas/Donor-Metadata/: Donor metadata reconciliation.csv  Donor-Metadata-README.md  donor-metadata.csv
docs/schemas/Donor-to-Alignment-Metadata/: Donor-to-Alignment-Metadata-README.md  donor_to_alignment.csv
docs/schemas/Human-Donor-Metadata/: BICAN Human Field List Diagnosis.csv  BICAN Human Field List Family History.csv  BICAN Human Field List Perinatal Neurologic.csv  BICAN Human Field List Subject Lookups.csv
docs/schemas/Library-Minimal-Metadata/: BICAN-Library-Metadata-Schema-README.md  Deliver_Library_Pool.csv  Library Minimal Metadata.csv  Library-Minimal-Metadata-README.md  Pool_Library.csv  Receive-Sample.csv  Shared.csv
docs/schemas/Specimen-Portal-Metadata/: Brain_Slab.csv  Brain_Slab_Collection_Metadata.csv  Donor_Metadata.csv  LICENSE  README.md  library.csv  library_pool.csv  library_pool_package.csv  specimen_request.csv  tissue.csv
docs/schemas/human field lists/: BICAN Human Field List Brain Specimen.csv  BICAN Human Field List Diagnosis.csv  BICAN Human Field List Family History.csv  BICAN Human Field List Infant History.csv  (+6 more)
schemas-ephys/: README.md  acquisition-schema-ICephys-TNowak.json  collection-schema-ICephys-TNowak.json  device-schema-ICephys-TNowak.json  experiment-schema-ICephys-TNowak.json  linkml-process-ephys.xlsx  preparation-schema-ICephys-TNowak.json  process-ephys.json  project-schema-ICephys-TNowak.json  recording1-schema-ICephys-TNowak.json  recording2-schema-ICephys-TNowak.json  recording5-schema-ICephys-TNowak.json  recording7-schema-ICephys-TNowak.json  recordingAll-schema-ICephys-TNowak.json  recordingAllSweeps-schema-ICephys-TNowak.json  sampleinventory-schema-ICephys-TNowak.json  subject-schema-ICephys-TNowak.json
schemas-ephys/schemas-ephys/: experiment-schema-ICephys-TNowak.json  recording3-schema-ICephys-TNowak.json  recording4-schema-ICephys-TNowak.json  recording6-schema-ICephys-TNowak.json  recording8-schema-ICephys-TNowak.json
src/example_pkg/: __init__.py  example_module.py
src/scripts/: example_script.py
tests/: test_example.py
(+78 files in other folders)
